# spice-common

./: .gitlab-ci.yml  Makefile.am  autogen.sh  configure.ac  meson.build  meson_options.txt  spice.proto  spice1.proto  spice_codegen.py
common/: .gitignore  Makefile.am  backtrace.c  canvas_base.c  canvas_base.h  canvas_utils.c  canvas_utils.h  client_marshallers.h  draw.h  gdi_canvas.c  gdi_canvas.h  gl_canvas.c  gl_canvas.h  gl_utils.h  glc.c  lines.c  lines.h  log.c  log.h  lz.c  lz.h  lz_common.h  lz_compress_tmpl.c  lz_decompress_tmpl.c  macros.h  marshaller.c  marshaller.h  mem.c  mem.h  meson.build  messages.h  ogl_ctx.c  pixman_utils.c  quic.c  quic.h  quic_family_tmpl.c  quic_rgb_tmpl.c  quic_tmpl.c  rect.h  region.c  (+11 more)
docs/: .gitignore  Makefile.am  meson.build  spice_protocol.txt
m4/: spice-deps.m4  spice_manual.m4
python_modules/: Makefile.am  codegen.py  demarshal.py  marshal.py  meson.build  ptypes.py  spice_parser.py
tests/: Makefile.am  meson.build  test-logging.c  test-marshallers.c  test-marshallers.h  test-marshallers.proto  test-overflow.c  test-quic.c  test-region.c
